[v9r1p7]
use DIRAC v6r19p15

* use a certain script_version and use lb-sdb-import
* do not reschedule when error code is a multiple of 64

[v9r1p6]
use DIRAC v6r19p14

* unpickle the simulation conditions and use the unplicked object for comparision
* prevent checking the whole production unless specified as it may take time
* add option to remove the source replica(s) when replicating a file
* increase the EventType size
* use ReplicaFlag All for getting productions
* Remove addLevelDefaultValue
* do not overwrite the existing value
* if the value is empty, the dates should not be in the update
* increase the size of the column
* Docs: add ReqProxy in the BOINC setup

[v9r1p5]
use DIRAC v6r19p13

* print list of selected runs
* fix typo
* fix help for setting up ROOT

[v9r1p4]
use DIRAC v6r19p12

[v9r1p3]
use DIRAC v6r19p11

* fix for jobs no longer in JobDB
* fix potential exception and exit for persistent fatal errors
* add CPU time to job debugging info
* fix message
* fix selectProcessedFiles for intermediate files
* fix wrong message
* add --EventType in BK switches
* add EventType in BKQuery builder
* improve output
* simplification
* bug fix
* set default stripping priority to 2
* removing LFN:
* minor fixes
* type checking
* Removed add_DN_LFC
* removed add_DN_LFC bash script
* pylint and style fixes

[v9r1p2]
use DIRAC v6r19p10

* self.siteName is not known in __init__
* datasets can be visible AND invisible
* changes to help debugging MaxReset files
* DOC: maxCPUTime for boinc templates
* fix the pilot.cfg path

[v9r1p1]
use DIRAC v6r19p9

* FastSimulationType can be None
* the retention rate should be float
* fix case of already replicated RAW files
* fix test
* TarGZ: move the instanciation of the SE out of the init
* remove unused imports
* get FailoverSes according to getDestinationSEList
* fix typo
* cosmetics
* add logging info
* PPG can change the newly added fields
* typo
* more improvements + progress bar for interactive usage
* fix exception