@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v9r1p7",
+  "version": "v9r1p8",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r19p15",
+      [ "Dirac", "v6r19p16",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v13r0",
